@@ -5,25 +5,23 @@ AUX mousepad-0.3.0-validate.patch 373 SHA256 60ea9a669273c9844ced3600cab1588a0bc
 DIST mousepad-0.3.0.tar.bz2 481125 SHA256 10f27506994d0d0b8f9e02555404a144babedab97517abe3b6be8b2d21ff046d SHA512 4e8f7cd8f05265c7f3964f0f5196721136c501351aa8c7bae1e3a6056fcd61f40364f2bb226817d458afa3707334dd600efbae2f8d050d65841ef03085717e42 WHIRLPOOL ed3582231bca8d3ea1f5a4adaf6279cd48d3628ba1154db80c6fb037b0efacbaf7535dad9bb4631982cfa5ee73514a628c340cb017514b0ab29d028b3c974b1c
 DIST mousepad-0.4.0.tar.bz2 578483 SHA256 60114431eac8db6bb6ce18bd38f1630cccb684375b97a445a1b6fd619848d132 SHA512 5196abd04268d1ace118dc485b72bfcfb7f9175eeaf52bc97c08c1646371d26401403a3bb199d882380bcb998547c65af9bd054f0365afd846c0ad74d3c3b1fe WHIRLPOOL dd087f38d75836d28cdae3a851d2ede0246a66db104710bab919928d32b63e470c95d77ff09c34c92e90322f14d5f85f83dc913acc529b8dd95ad8bc2712b9c1
 EBUILD mousepad-0.3.0.ebuild 885 SHA256 b49797dd3989c0683eba72a18de8575f43af48e5d0168b124fb5f0174badccb4 SHA512 216a92c0a1c2f3f1d102fab64c1c0509b2b534d3b305cafd14c65e87e306a20b2509aaf385f0130d4f7bd44cac6662514ba76229430b7599f25d89e9b427c577 WHIRLPOOL f90fab12a52944f4d99d4d03045eb5711713e1cc200b4d92c700a36e00ce20e359cb69475f7ce43484d59114412d98a68e3a04cb85413fca68f9948e68ec6259
-EBUILD mousepad-0.4.0.ebuild 1084 SHA256 739d4cc7541b3734777a525f760e78d7b8804a2d0f5d1218bc9cc7ac72e2a7ec SHA512 e278da8c5bb8e41c46295bcf7ce62323b8982b8b824040f61af50bfdb9d1a4bd4811bbab73f676a0c42b6264832b7d73b9747ab8911010626009d7cc28f4377c WHIRLPOOL eacf9724404403c587a1b29f3d40b84648093142d21da2f91daa11da3a43cca68efc01789922ec1c6fe53b1e801359a3efaefef148cb2fbc374d021f09422870
-MISC ChangeLog 834 SHA256 42f5deb0c750f255e4b1a5512af63ff5e3d51410fb788299290e7494e9acec29 SHA512 439dbd75d1988d0c857f2e0085e01bc66c98d9dd5940826d90f634085d0de8e07ed02c69cc6e0043c875ad447e9b23840243ff3ff85d70b7172855885c03415f WHIRLPOOL 500f866a914932d0540a33c81ec64015a242e776ffdcdd7583d1dd9b94b3b58217aefebe0ee5364a1489298224401bf83c2e893654e62fd885c75c8437428ec4
+EBUILD mousepad-0.4.0.ebuild 1086 SHA256 4d87065c1dd79f77fcc4a058cea7ae93523a3fb6aa82d0a3a51c030029216724 SHA512 f9ccd3efaa455209ce720647c4452c6f175de493a226e36bc2c01acee008667c12f576420b2c872f8a44dfc8603266b717980e8fdd82dda4dc07a40d8b76dd4d WHIRLPOOL 2784cd5c8faebdf1361ddeaac6deca9ce37b9c0176908f73d4ffbdd96e82ea128abe233c2e8823d161c6c680e7bf3bfe50cabddb43882dbe721e2cdbc74ecd7c
+MISC ChangeLog 933 SHA256 f7ff80159a42d271c515a06629773db4bae2f8ea086c989659bf2b06afc24644 SHA512 ce1fa3c00bde90d63ac9637badcfea0c00f9de0b48fb29fc934c8c63b7827941996aac111035cefce599b45185faa6145b05799b9299a18fa4fe8520157b74f4 WHIRLPOOL c2ed603cac7d30a9098435cc63a99c5ff6962675f02751ca33ee2e020d0a4a6b21e172c21fd832f4d82bea87bedf82075ff50b7e1ca32fd2f450c63e99f8f33e
 MISC metadata.xml 232 SHA256 a21f68810397ed4fe46e99100f2cbb2c8aecca9937f5448beb6517ed88b3ea4f SHA512 e8ea1455797501a6bafedc4bb3204211bf629a09c01111746b6640557c55fc66fa653ef3f0294be1dffe2b37838355108803177e308983dee52fcdbebb59c4f1 WHIRLPOOL b4c08ef4823cffbdba070847b4ca29d5eb055d8809b338b38f9cdb21c74e9d90289c40ea144d22bd9124b04b87b1b307faf4fa1825fc7b65e9bf1e95c65a453c
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iQJ8BAEBCABmBQJU/bBHXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
-ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQ2REJCMDdDQzRGMERBRDA2RUEwQUZFNDFC
-MDdBMUFFQUVGQjQ0NjRFAAoJELB6GurvtEZO3TgP/2bkrM0uHJkIelVLNO/Q+FIn
-0C5YztKHHZTsMO5+Vs/rNy5qzx8QGSMaTeVjCw8Fk+eLzxiJw9A1S1lLEdVf3BZ3
-Zbpr3boSTs8bMw0XjDoO4+8pbibt/q5RlTu53DNSeVzXyrEzgR2A/bdm1X09yDBp
-OCdhxAxdzYN0P/ZXpCgEwhvH18OZn2NzTPWSrmZh8AbO5ZvF7brH5UK3HmdQj9Gp
-SDtoq5uY+XPFOFOUp8biwva2x5gbIB3KpsxqEWH8ZMPBZrm5/pw4AIL0f5nZqygq
-fyCsr8SJdtpZVeHmDoEtrIKsFsDweyn9xPVTZ42r+Ss56LnlB3oNoE8FgP9T4Bkb
-0pCLrcjQdyTIaJzon0f1YcO6SY3CsixLoIOocvOwu+mPYInfRq/Yo+O4hQPLcKsR
-YjqbAAgZge5kckcLNIyiXano+oQ19Vqa+hbgG8XQAc1d5+6JWXbXbey8HW6ZtB5L
-xbV1Cx2/xNeOSC4facT2mDxx2DWPjAzRNWApeGIWFx97zlN95aep7k3v0zp059Mt
-JILANq+QIJzrIAy9Li6uCqqtVUwVNIYQx6CdycoPDyG/pEn+xk+PsNJ3u35oEeJh
-xYGEIfg6g1WcixoDM8rFNgK9HSZf3Qu3D6r08jYhM519WtVHnSSLHzOCtNpoNuR0
-vRHBLRi5Jyd7kVryEtix
-=GEhA
+iQIcBAEBCAAGBQJU/da8AAoJEKXdFCfdEflKzjkP+wQT92mRf8lhDndzegq5oo41
+ix7CoR8xI5RqLwo7PrNvbLQlkWdpvaVSdXPuN2CZTQDlklZyT5gjZo1PBSKmAj8N
+d+xcrM+JOFNvGyZx7SRfDSoYZCbvsMMWguVQVdOr562VcwEWf5dh+Sd8mkZUirP/
+Q9QA3czk1jGUxnUFuL0lOEem7cdzP8evCIRqfyL1s0dlm8w7rXu0T7wxeLN4oIsT
+xSdMZX64SbmV8G/Iv2Jt6+VDE9DD7aQXwW5BNgPPNVgwevM6FNfNonNO23bc025k
+XckkH0NLHdGq3NEGsxGx1I+F11qxBoeGbrTEeofupLp83sO21lNP+8NyRFdBlKMa
+j9uegtWGQZ2XijtAevpZgs73W52abR2MT9NiLTspRkzH3nXvLLZd906+haMghzVX
+MmMUs5ASXpzeStr/5NBN3VCyu3bHJ2wyup+7vr9ykBpwBloLM8mIh0xyVTOQmHlI
+XgZpYV438px0nprUU8blDxw/Ob5rjQU9+GBZyEYLjzuTCJbf/tgGqhLG9ky7OJtb
+I8MIxSTIrVpXMXDMwSQ8dTICEhAJJwO7mbWanxXGjSyFYfqwju7b6pC60QGnFxtk
+XB0Zg0R7CkWevI1Mm2DVenWT7QzEM3sn4HN+av3QA/AqZsZnfqGWB4dinQYe32bQ
+m+4qnW0zSeFg6HBl39bF
+=6IJR
 -----END PGP SIGNATURE-----
