@@ -1,5 +1,5 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA256
+Hash: SHA512
 
 AUX texmaker-3.1-hunspell.patch 4493 SHA256 4605225c49282b2e075f3fc96dddaf98367be415a7ef195f27d9ff537a107f87 SHA512 212cb763cdca5e4b3ba8f0893927df7e6dfeb11be8a52861b323fa415827e6d8d91402f7ce5a90ffe49d8681a78ea84abf4c339a4c2973b8bf38d5f14fba7780 WHIRLPOOL 4034fd261ace8d1cbbcfba376b8d576f16d13181e2aef39a294fa2e44517a24137a7b806a6167ffe0520f7aa7d028e2d545bdf7f127e36b4a1dac2e183397f0e
 AUX texmaker-3.3.3-qt48.patch 294 SHA256 28da547538b5ccff6fa60e0f3b7d77749991d62174c97f9f637db12c7a3365aa SHA512 28d85b799b81150748b4483b6cc514472aabf646da9ef88eedad6f4347b85e848b8e1c36608ccfdd667f7fca32cfffc619343af31f1364e0f2b134cf84ced80c WHIRLPOOL bd42204ac3e6c09d5f660cd07d595cc6f51878c2fd523ffbf5d1ac13256fbbdb4f1f8ec3b519f2d186e0a7e7d1d6f6c346114c58b67e3742880ba3a7219810bc
@@ -24,23 +24,25 @@ EBUILD texmaker-4.1.1.ebuild 1984 SHA256 036e890c625759d54bf795d7884a4c56681651d
 EBUILD texmaker-4.1.ebuild 1973 SHA256 204f6baa382fd5e15fbb19928153bef15f17ea3a671f8081c3b23e8dbff937a6 SHA512 10918d1fb54ff7535993f01bff3df3f8b85343e72d0264ac0c82afced0c78062541de7b0b3100a9eac654082710e1e213ed5e63827db2cb57354152b48f16440 WHIRLPOOL 8d6420a7c2dbf487a6183fe83923ca08789fd539a0c3f983875da7dcab0c73f22fcbff29fbfb4e277858e692d69687cb6d638e16052a3d08015c210a7d54ff01
 EBUILD texmaker-4.2.ebuild 2001 SHA256 530c2d27e6ed4cee42090b5ca49ca492168edd13b766a2b64d80cb72504e78f2 SHA512 d697e0e604a8460a4a80bce00c87a4772b707bde98fbbcdb50209bd237f1a5ddbbf5f80a978bbdb079780d808435b0956f32a3bae49aeb9dc5d4279a2405a2d5 WHIRLPOOL 60babae075a4182ecf6b392b0176ee73a06f226b024766dfe9184eda16e4e1aeaea890d198a1703548261effc11ef6580729b6892687f7e82cba415087029dc9
 EBUILD texmaker-4.3.ebuild 2001 SHA256 496899bbb311e146a9e582862e8f2617699beac697ba71e79859629b3a114798 SHA512 36f4c992feefd6b90631ff7c9b92230f74315b17b09680e0a94f737f9a9c65436bef2e89dd82557b7f33fc73ba228cb2c93695cc6a06862c0afc34badd24743f WHIRLPOOL 57336f6ccc87e304323186b7cd0a4ecfed30619ce1cade484e2c97ab07bc1ff185e7cf58f206117a22f534ee3626ff2b2efde6872eecc27d17dd9978821b4b56
-EBUILD texmaker-4.4.1.ebuild 2065 SHA256 7225eee959be16761011d27836539b30b31f3456e37c8526159aafdc60194bc3 SHA512 35489e18325385029c06b7226fd0ea2cf489a42693f567774e7a53992f3cc52f608949810d1cbb70db774eb0a52250eb3692749c7df26a6081a18c2be9f2a0fb WHIRLPOOL 4a3a45accfd20535e2f84f4561430db893acedb63e66494b2458b70185dee0ed3355fae7f401565c81655ca31b126482dabdc21d3b124fc51120cc2d345bc9e5
-MISC ChangeLog 21874 SHA256 d1410d38682526f7df53d9bc124ec961cdbb70f3186a62afd29aae00b84899f2 SHA512 9d7807951c6b24eaf5ba03b8a0d27821656c5593614adaaf5362649f30295a0adb988aebd8428e487a03783b64da6662f82582f18045bc45fc5be81ec2ef0f58 WHIRLPOOL 36d9ae21b9a5f6cb26c085c2d53bc88e16a8f6ebc427a2bbc565f340624afdf5ec4ea2b2cb2ac32f2638ba35b69ce06f9b44092fd4a1dca685cdeaceb99aeb70
+EBUILD texmaker-4.4.1.ebuild 2067 SHA256 cfbdd39251f9a3460bdcc344e4b319264d8b485e0af83e0129c07f3a821bd25b SHA512 e4e57dc791cca351c09323091cb418d854cdd99be5e038bfa7068d7d2ed15c93be068b18b6f4723a80b5536b714a161e0c70e68d33d1006507cfb79a6e408ae0 WHIRLPOOL 2bc3cbb32a05d39d6d906dd1d1ca82fff0aaa85f36ff093de2b383e360ab3332f8ae03b29a4b3dee0e5ef7d272341136297d649100ec8188a3faa458e86b7fb9
+MISC ChangeLog 21970 SHA256 276588de8c94eb66b769f3926aad069fc45cf40bf22d952f8765b4978fc1f72c SHA512 eee3c250dfef04a9f7ecf998cd28400913447f3a4a2164a044555f2f4525bb526f6fba2672b72a97fddca92922bb56f9beb94535a762811a5a9123f5f7e48193 WHIRLPOOL 5644b2af1fdcf76759183dc2827f5e660ba315834bba8da6b1af3ad9b7da047cee5b3e0dfcc32f1289745c5bf77a4110479956091a142ba5c67dd93a7b56db5d
 MISC metadata.xml 281 SHA256 2c7a572c26bbf24b0de55efe3ef0be56a2d9280869ffb4647791ce66f78a01bf SHA512 793f7f982c959f54c1af0f96a433837d031cf619190e57d784a5bb1f05503de72bf59329774c9efde5bf52c286eacd8032b366e1cc0ebaba94e110c326faa93d WHIRLPOOL f5324da1385ba50007e7f01f5d34f767f1cebefec780de74ade5c980c4d05e7e36590c6a8d79f5608201831daa6597e4a679b4e6a4e4ac33c2e09d94e554f5a2
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2
+Version: GnuPG v2.0
 
-iQIcBAEBCAAGBQJU9CeRAAoJELp701BxlEWfmOkQALYtJk5tz9LRk33UXZIMu39+
-hkNmYGpGof2DhCP6b6Ib4igUOc8dwfySOD4bzGL9OoESfpg2Ub4X3YvK4LorgyQN
-TFstmbR+bYEJcnGOY/14S7nyJ1tJRlnsh6DhQNSVxlqNukfGaK0lVDw1/F8XMhFU
-GA+FREfwmT59kim7t9NzfVf50erR9B2hg5P0PDzNXDUvO+tKMuGw6B1jtSRvXihs
-nc6T46X46tszHtEJF1sqmAP8bPPLvki6TOjzCeaFeYeTK6uX7H1CW2xGilGWN37r
-aj06QEsaQI2vavG6OeI0gxhAOVtdeuhSV6VoQ+MkxNgTVxmpnvgZ+Ta/7uroToAG
-DlORcVxTGrSHqWpCGqXxNytOxnyPgAEWAnMSjlhtp+7xRsNo8mTxv2nJoQrGAtMs
-uBVysrOt3ONVU6UBPni2db/mKNtGBhSlSiEJUv8hkkHdHxf2DjI96U6V0Sue1t2H
-UYGsT7aCkeWld6t4296ukS1b9fbhqq2gWVDRTHHBM2+qzwNWlSX183XL5ykU2WQw
-nOMinIdprdyl1zXlvUlYwpkl53lTtI9DtBzR2NeZrhSJ73Kg8qVHeZdQOh2SOzRf
-zXFC0DJOXuhL5mPMPjTbMP7+cqjrFJRJlXQiTKmUlWa62Guxs9SEcV83+qz0mK1r
-aBeFruMxw/Ou7QhovK0B
-=EDSU
+iQJ8BAEBCgBmBQJU/dfVXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
+ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQyQ0JDQjFGMzBDQ0UxMjFGNENDNDgxMDdC
+OUQ0RjIzMUJEMTU1OEFCAAoJELnU8jG9FVirGScQAJKzzOXuF3ye+rvLsw3Tk+j0
+P5+8YiO2ksS4nnQh+uGaVmJSueZaxVpo1ALpZeFK/7VHtSIiS8jNvN1j6YEsdz8S
+kyhQS30fJw6gmd+rQLBf6K0sTa+5Jze/ySQ2aZ77qc/H1g/A+AaiQ5ih/5FVNe1H
+pvJ7YoE8UTlvh4efhYCZldV1WCsVvq5DPpXbpu+FM7MhJFhoNi2ntc1F7kSvOkFf
+nOPFC5xnpQ5PbdPfTDH60CE8G6N8YM0pqKr3gnHecIzioOw/VTEL+fuKHPkHGFU6
+BRaxQUcmflCxjESmy2JPiVGBDPU2KeOgzMgcGvDcnlPLi9jx8RABdL6yx4FGFH/S
+/BizL1Q+KU82VCe3jHorJZUA5lRe/8uhfr9Skjvc/JQSYVGTvjTnsd/mZgvo0PtH
+eYbBB5kFnv0d64/DeqJwbXuliUzCuyXPaUJrW07buYG4xL5aKWP2LjuReNQlG2k9
+A44FrmpyqAhZXB6l4dmZ3KR1SALp2n2yTMsDCH0bIYe0rjvS3lej8B7TvMvttIGP
+9LCFx+657e74qaj07nGU6ttoKTdaUXCw9eiya/mhfoGPpqHa4eV1W3RAplJjNpEW
+Tz7W6zeD8Ooe9UQJOTnNnDDqcrNYT3syGiCT2N2r6k5i6ZFZZv955bCRqp0L1qTw
+HHpAZXWDrcIxqjsfX6fS
+=T6a3
 -----END PGP SIGNATURE-----
