@@ -1,6 +1,6 @@
 # Copyright 1999-2015 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/app-office/texmaker/texmaker-4.4.1.ebuild,v 1.5 2015/03/02 09:04:15 ago Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-office/texmaker/texmaker-4.4.1.ebuild,v 1.6 2015/03/09 17:26:44 jlec Exp $
 
 EAPI=5
 
@@ -13,7 +13,7 @@ SRC_URI="http://www.xm1math.net/texmaker/${P}.tar.bz2"
 LICENSE="GPL-2"
 SLOT="0"
 KEYWORDS="~amd64 ~ppc ~ppc64 ~x86 ~x86-fbsd ~amd64-linux ~x86-linux"
-IUSE="qt4 qt5"
+IUSE="+qt4 qt5"
 
 REQUIRED_USE="^^ ( qt4 qt5 )"
 
