@@ -14,25 +14,25 @@ DIST texstudio-2.9.0.tar.gz 25296387 SHA256 e984ebc4393de13d9f20f474ce88382d587b
 EBUILD texstudio-2.8.4.ebuild 1947 SHA256 a22cd5b7ec76d98fd0c7fb566573175d5084db800362752228ce6f327d1ef82e SHA512 5cdc57cfff199d6ad8f97cd64ade3c728e9591bd250471a6478a0c2102802aa04eef2182a53d96e6b73eed2df5c1124ec99aa2b0d5972835672ea6d1eb6cd621 WHIRLPOOL 8e1ac6edeebd835a38892d9ca26ae1683ef5184af6c1061dd3e44edbda1e54e95677a92115c5ebb0643e720235776162557f5a2d234630a8901702ba6ee1b722
 EBUILD texstudio-2.8.6.ebuild 1980 SHA256 d1703d501fed70eae833a5aa134904f5ec992424f8f49651b2b1daf744f833d3 SHA512 c91d3d9328431de63c9ed4e901530cdbe6db96e829d5957d7385878efa881f247d11ca1afd0c44fcd3c56522ad82ede10f0b5e3f127e50bbee81bd87ebb5f72a WHIRLPOOL 751a6f20d88b672b574d0999a02cbaff5cd28e3c23b1fb6939e2e083fea4dcbd1c30f93ea17eee8858fd7f9fbbfce02bb30212ff339d0432a623a5cab2e4230a
 EBUILD texstudio-2.8.8.ebuild 1959 SHA256 226dce4db27f3665bb920ab954cdb211855ea73ab9f58e2f3dc658c6ea0a76d3 SHA512 2ec609769128da66244703f17638ea838df69ae8125f71d95f50beea34a734f737bc27d6d7a48609b742e347813d8bb314c66f66c3e2332c03fb1eca2cc30a6b WHIRLPOOL acb08c2199afdac0d4b0c089fbc577d7cb55ee6e18cf63f8faf287dcfce22fac4ec97221a6cec285ccbd71e8d5d5ac39faa1d4d229f07064713b4a6f29378876
-EBUILD texstudio-2.9.0.ebuild 2354 SHA256 ca6a7b874657b79be858aa252be7d5a8d01660c70941fb98d23b56c4127efdee SHA512 1f2fcd40f68c2c31161232e72becbe344ef8d7f9a911a75f9ce659d740dff27737ef5df9fcff01e7c8d38e7662c85f475df8c8a30c6a03a9b8ddf54928edd1a4 WHIRLPOOL c649fa2bb5adc995ef28a666036cf07b8d3c47dcd524dbc7a99d27c086892ba7abf8a3a62c80b509d6e65d8a3ababe74a17fc29e22825f1558a4ae5cdda57998
-MISC ChangeLog 7291 SHA256 d9b25063826b4be7ed793979e2b45db503eec89ccffbf28bba1b0bd827d3a966 SHA512 1e38e95f97544165f5f0685ad362812311770f8be1e034a0e02d1094d954024df82d17be133a35286293f979885b184c3c0a5beffad92d77cde56a447a2366f1 WHIRLPOOL c49f677c82f4dfec7f2556d586386016f288334da750263252f1ab0709ef1d2d656e047bdac19bc48c28bf03eb227c16cd34aa5ec864279e1db15a9b772a7646
+EBUILD texstudio-2.9.0.ebuild 2355 SHA256 70876affee37c069c3aa160ca9a5f5ca6bc36627e929bf079f84ee2e1c769490 SHA512 65250cb1b099a0cf9bcedb4190c2383e4edce0ee53355ff6596f6012d5f8d3fe550695f89b0cb61170ec6aa7b9a6c55326cf72ce541db572a13268edd2e83e7e WHIRLPOOL c3ef3f68ba54c11865c6d9dad1dafed81894868464490fb3f8a4e17f2204b76f0ae69300d5b25f335d20d37864cd803aaadb8f824d2da9ef4dc07259cb044d23
+MISC ChangeLog 7387 SHA256 77c007baf6b773156c9b015c35249e180195e2c135283f432c43018f29013a38 SHA512 a503e0365ae9fa5a663c7eb80f03e517cf5b6fa6755bf9b7f426d2c4262cb744cc57af0e9b0ed6a973edaab8e9ee44cffb1774973074c10fcefeb05cc4fc4cf3 WHIRLPOOL 2f4f6d199b5f1cd1ea9368612c17b699055e5755046f42579bdae717bd64b8344ddde955e4ebfb6025d6166de75c543c21443c6d8f6a89b00964ba3a436ef85c
 MISC metadata.xml 283 SHA256 0c64e26ba93ec0d8dd149b088c63e4448174b2f843c91e1f74ac17c2a5feea27 SHA512 74ce72ee9b32eb81077907416c71890c37d20055481df15f0e056e083fe300701dabf6d8df11aa1ecbed13c1ea167305417050ca2e41f4e1b63e2a434f18c821 WHIRLPOOL ac0ac10f27910c9beb29ab731afbe9bce6c4811fb0a1f787036ae1b0638dbdb6ba2a744b3ad4ca6fa5a649a4a8be082969cbe99c8bcd0cdceea8252a5268df4d
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0
 
-iQJ8BAEBCgBmBQJU/b/pXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
+iQJ8BAEBCgBmBQJU/dhHXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
 ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQyQ0JDQjFGMzBDQ0UxMjFGNENDNDgxMDdC
-OUQ0RjIzMUJEMTU1OEFCAAoJELnU8jG9FVir3qkP/3d+wuug2xPyEw0wo+Txh2kv
-db/cj0Bae2DOBYx+yIA4XLcrW1jw8K+Cb4LouJzcUo61PvE/Y3qH52kMEC3CGE1B
-gsVTeDbAxvPOfxvla+KGgJoGcFpo2lsX0BYbBlLouFSG6yrT6bmXrjXnDKqyeKOD
-eNPrSeumqUpVenw3wsS6Xjz5visJMZ+j7I7nvbsf64T0Fob+GbRR1db9Vp/tBR+S
-DpdhYDCmZVnpDr36todptvwQlxe95jtABd9AOoczFLUJp213ksaKvZdCY5d+S7gL
-MeWNF7cgaeTfqPLrlIziPYVwzzBJFBWpHoN45e84w1GdnEUFYtFwCrBey/PSaGYC
-awtZUryo8APT09drB9ehHj02he2wj+AiiIGedXi7flim/Pg0Zkcl85arjmG5vdCx
-UTar+06booLiIksWBLq4hRwDEq2LwLHTHAftm0q8mU8YG7ekH7i21DQldUQut/83
-sCeFqMZtxmdmjUWdRq+X4/MUqcrFMXdpByBvBclSj6SfmYTTz8FqMFu89lPImmw1
-b5p65SxCA3Tlu/vJAYpnDCz84oVkG83abedwA2a6e9rverXYdRUptHaPVvrWsZQD
-EDvISu62M7FYWQ/hZEgj+owLfZY6R5C2aQvBjVqNWYBB+sgpMAUCEG93ULByZwsZ
-T8RNDHgns+taOWJP4Kdr
-=bGz7
+OUQ0RjIzMUJEMTU1OEFCAAoJELnU8jG9FVirICcP/Rx8cFX4p7mocaMWNhkkqJVc
+Vb3pNtO4r+6QDiTytkl+5pF6en4DqaoqNbtMwsMYwf/qEaaOlnYMU/C2ZyHdN4Os
+6Yf7OIgtTxkCKWTlOk8eXUwbkYKv2vcDYmxrTC2AL6ZRN1TEDVXsCYs/Mu5yE2g8
+1lsB71Ntv4pJH1A/JaenmXqwL3lrp/ThEl8GrR8+CLL3s7JTEccbnXhAHpHqF+5R
+w7TufeNzEZNGpvfAqeu9cvTrHQ7LtFQeA17xAbRHajweTakr/kCsJzgmH8MMQRua
+SIUSWw7RZMD0Iqi0q6RF9vdUV/6Yo4NvfWM8WElfr1p2XzDgZdyKSp3ENyvLMivw
+4pHxYiaUXHJKWL0mt78RTOUcoMjOtxC6VEWhPxhHMEHqMn6H8NivYv9yBCehgKrP
+vILoWYdEc//nQUzncXnzgB6VMn9cr/nxIiCJRfMhlMIp7JigtNlLwEsNFJapCjF7
+G/3cULspmGdjfIrTD93WWLpe5SeZJfqn9yR2Y2zfwfUSIOAcl2A7jWyiHdroGwZC
+Gxn1SMnm+w+9MTBhK58fMT3uI35NT0SJwZp0eR4F2v54n4bH6gQp5+WH0GE4UBZn
+/uLgskv7weVwbejBTa9m0vc+UwpAXjRwZFoRShgwawiBs+MlJjxcDVGPrF3F3mje
+mvITyeqC6wYOHTn3ecXS
+=VRlx
 -----END PGP SIGNATURE-----
