@@ -10,4 +10,4 @@ RDEPEND=>=dev-libs/glib-2.30:2= dbus? ( >=dev-libs/dbus-glib-0.100:0= ) !gtk3? (
 SLOT=0
 SRC_URI=mirror://xfce/src/apps/mousepad/0.4/mousepad-0.4.0.tar.bz2
 _eclasses_=autotools	8fc2dd333ef9346c906ffd9a523d8211	eutils	998e5931fb95b10a6a11ec796ada2759	fdo-mime	0acfe1a88fd8751a1d5dc671168219fa	gnome2-utils	5cdfd22a2163c9d3a891648bd19453a7	libtool	52d0e17251d04645ffaa61bfdd858944	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	toolchain-funcs	a3db8057ea0903a9ebea4e46aab28ff9	xfconf	eee85b2bc9e9826f5a9c1349a75a69fe
-_md5_=518140a262024b0e073dffc5ee4e4f3c
+_md5_=3e373cd1b8e6a67961a087d7d23bafc8
