@@ -3,7 +3,7 @@ DEPEND=app-text/hunspell app-text/poppler:=[qt4?,qt5?] sys-libs/zlib x11-libs/li
 DESCRIPTION=A nice LaTeX-IDE
 EAPI=5
 HOMEPAGE=http://www.xm1math.net/texmaker/
-IUSE=qt4 qt5
+IUSE=+qt4 qt5
 KEYWORDS=~amd64 ~ppc ~ppc64 ~x86 ~x86-fbsd ~amd64-linux ~x86-linux
 LICENSE=GPL-2
 RDEPEND=app-text/hunspell app-text/poppler:=[qt4?,qt5?] sys-libs/zlib x11-libs/libX11 x11-libs/libXext dev-qt/qtsingleapplication[X,qt4?,qt5?] qt4? ( dev-qt/qtgui:4 dev-qt/qtcore:4 dev-qt/qtscript:4 dev-qt/qtwebkit:4 ) qt5? ( dev-qt/qtconcurrent:5 dev-qt/qtgui:5 dev-qt/qtcore:5 dev-qt/qtnetwork:5 dev-qt/qtscript:5 dev-qt/qtwebkit:5[printsupport] dev-qt/qtwidgets:5 dev-qt/qtxml:5 ) virtual/latex-base app-text/psutils app-text/ghostscript-gpl media-libs/netpbm qt4? ( app-i18n/ibus-qt )
@@ -11,4 +11,4 @@ REQUIRED_USE=^^ ( qt4 qt5 )
 SLOT=0
 SRC_URI=http://www.xm1math.net/texmaker/texmaker-4.4.1.tar.bz2
 _eclasses_=eutils	998e5931fb95b10a6a11ec796ada2759	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	qmake-utils	ea709b525d28e3087eddedb2f884dbbe	readme.gentoo	106edea5533517715013de909a333abd	toolchain-funcs	a3db8057ea0903a9ebea4e46aab28ff9
-_md5_=317955b698c8bc884e942404cd3212ca
+_md5_=1256df3828974800411394b3c20ae6f7
