@@ -3,7 +3,7 @@ DEPEND=app-text/hunspell app-text/poppler:=[qt4?,qt5?] >=dev-libs/quazip-0.7.1[q
 DESCRIPTION=Free cross-platform LaTeX editor (fork from texmakerX)
 EAPI=5
 HOMEPAGE=http://texstudio.sourceforge.net/
-IUSE=video qt4 qt5
+IUSE=video +qt4 qt5
 KEYWORDS=~amd64 ~ppc ~ppc64 ~x86 ~x86-fbsd
 LICENSE=GPL-2
 RDEPEND=app-text/hunspell app-text/poppler:=[qt4?,qt5?] >=dev-libs/quazip-0.7.1[qt4?,qt5?] dev-qt/qtsingleapplication[qt4?,qt5?] x11-libs/libX11 x11-libs/libXext qt4? ( dev-qt/designer:4 >=dev-qt/qtgui-4.8.5:4 >=dev-qt/qtcore-4.6.1:4 >=dev-qt/qtscript-4.6.1:4 >=dev-qt/qtsvg-4.6.1:4 >=dev-qt/qttest-4.6.1:4 ) qt5? ( dev-qt/designer:5 dev-qt/qtgui:5 dev-qt/qtcore:5 dev-qt/qtscript:5 dev-qt/qtsvg:5 dev-qt/qttest:5 dev-qt/qtwidgets:5 ) video? ( media-libs/phonon[qt4?,qt5?] ) virtual/latex-base app-text/psutils app-text/ghostscript-gpl media-libs/netpbm
@@ -11,4 +11,4 @@ REQUIRED_USE=^^ ( qt4 qt5 )
 SLOT=0
 SRC_URI=mirror://sourceforge/texstudio/texstudio/TeXstudio%202.9.0/texstudio-2.9.0.tar.gz
 _eclasses_=base	87f7447ccfc06fd0729ff4684e11e0d6	eutils	998e5931fb95b10a6a11ec796ada2759	fdo-mime	0acfe1a88fd8751a1d5dc671168219fa	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	prefix	21058c21ca48453d771df15500873ede	qmake-utils	ea709b525d28e3087eddedb2f884dbbe	toolchain-funcs	a3db8057ea0903a9ebea4e46aab28ff9
-_md5_=a1a88b1d2ff1a0978ab0bdb02b428fd4
+_md5_=da1661de7b216416e98390c949ac5390
