@@ -1,6 +1,9 @@
 # ChangeLog for app-office/texmaker
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-office/texmaker/ChangeLog,v 1.146 2015/03/02 09:04:15 ago Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-office/texmaker/ChangeLog,v 1.147 2015/03/09 17:26:44 jlec Exp $
+
+  09 Mar 2015; Justin Lecher <jlec@gentoo.org> texmaker-4.4.1.ebuild:
+  Set default qt choice
 
   02 Mar 2015; Agostino Sarubbo <ago@gentoo.org> texmaker-4.0.1.ebuild,
   texmaker-4.1.1.ebuild, texmaker-4.1.ebuild, texmaker-4.2.ebuild,
