@@ -1,6 +1,9 @@
 # ChangeLog for app-office/texstudio
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-office/texstudio/ChangeLog,v 1.40 2015/03/09 15:44:40 jlec Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-office/texstudio/ChangeLog,v 1.41 2015/03/09 17:28:38 jlec Exp $
+
+  09 Mar 2015; Justin Lecher <jlec@gentoo.org> texstudio-2.9.0.ebuild:
+  Set default qt choice
 
 *texstudio-2.9.0 (09 Mar 2015)
 
